src/tests/JSXOutsideRender/valid/case#1/index.jsx
// Arquivo: ExemploReactSemJSXForaRender1.js

import React from 'react';

const App = () => {
    const titulo = "Título da Página";

    return (
        <div>
            <h1>{titulo}</h1>
            <p>Este é um exemplo simples.</p>
        </div>
    );
};

export default App;
